--- a/Draw/Dice/Controller/Settings/CustomDiceSettingCell~ipad.xib
+++ b/Draw/Dice/Controller/Settings/CustomDiceSettingCell~ipad.xib
@@ -45,7 +45,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 24}, {76, 91}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="232014887"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<int key="IBUIContentMode">1</int>
@@ -55,9 +54,8 @@
 							<object class="IBUILabel" id="232014887">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{119, 15}, {177, 56}}</string>
+								<string key="NSFrame">{{119, 15}, {495, 56}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="772317120"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -85,13 +83,13 @@
 									<double key="NSSize">30</double>
 									<int key="NSfFlags">16</int>
 								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="772317120">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{119, 71}, {495, 54}}</string>
+								<string key="NSFrame">{{119, 71}, {588, 54}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -113,11 +111,11 @@
 									<double key="NSSize">22</double>
 									<int key="NSfFlags">16</int>
 								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
 						<string key="NSFrameSize">{768, 139}</string>
 						<reference key="NSSuperview" ref="774316942"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="254958883"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -133,7 +131,6 @@
 				</array>
 				<string key="NSFrameSize">{768, 140}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="946753982"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -230,61 +227,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">9</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CustomDiceSettingCell</string>
-					<string key="superclassName">PPTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="DiceDescriptionLabel">HKGirlFontLabel</string>
-						<string key="DiceImageView">UIImageView</string>
-						<string key="DiceTitleLabel">HKGirlFontLabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="DiceDescriptionLabel">
-							<string key="name">DiceDescriptionLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="DiceImageView">
-							<string key="name">DiceImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="DiceTitleLabel">
-							<string key="name">DiceTitleLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CustomDiceSettingCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HKGirlFontLabel</string>
-					<string key="superclassName">FontLabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
