--- a/Draw/Controller/Shop/CommonItemInfoView~ipad.xib
+++ b/Draw/Controller/Shop/CommonItemInfoView~ipad.xib
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, -10}, {768, 1024}}</string>
 						<reference key="NSSuperview" ref="444008462"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="889029020"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -84,6 +85,7 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{624, 493}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="284324708"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -94,6 +96,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{52, 67}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1042869567"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -104,6 +107,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{33, 297}, {556, 2}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="297121548"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -117,6 +121,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{40, 322}, {72, 37}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="661194072"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -146,8 +151,9 @@
 							<object class="IBUILabel" id="364029254">
 								<reference key="NSNextResponder" ref="889029020"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{208, 322}, {72, 37}}</string>
+								<string key="NSFrame">{{217, 322}, {72, 37}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="93325268"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -175,6 +181,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{40, 394}, {192, 65}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="940388026"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -204,6 +211,8 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{398, 394}, {192, 65}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -220,8 +229,9 @@
 							<object class="IBUILabel" id="661194072">
 								<reference key="NSNextResponder" ref="889029020"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{110, 314}, {100, 45}}</string>
+								<string key="NSFrame">{{114, 314}, {100, 45}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="364029254"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -229,7 +239,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">400</string>
+								<string key="IBUIText">40000</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC43MDU4ODIzNTI5IDAuNTg0MzEzNzI1NSAwLjQzNTI5NDExNzYAA</bytes>
@@ -253,6 +263,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{40, 210}, {549, 89}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="291528773"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -275,6 +286,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{208, 111}, {221, 45}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="566096017"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -302,6 +314,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{437, 80}, {115, 76}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="978718182"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -327,6 +340,7 @@
 						</array>
 						<string key="NSFrame">{{72, 242}, {624, 493}}</string>
 						<reference key="NSSuperview" ref="444008462"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="201812954"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="273278171">
@@ -338,6 +352,7 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="431875059"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="273278171"/>
@@ -604,7 +619,106 @@
 			<nil key="sourceID"/>
 			<int key="maxID">31</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonItemInfoView</string>
+					<string key="superclassName">CommonInfoView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="buyButton">UIButton</string>
+						<string key="cancelButton">UIButton</string>
+						<string key="coinCountLabel">UILabel</string>
+						<string key="coinLabel">UILabel</string>
+						<string key="contentView">UIView</string>
+						<string key="itemCountLabel">UILabel</string>
+						<string key="itemDescriptionLabel">UILabel</string>
+						<string key="itemImageView">UIImageView</string>
+						<string key="itemTitle">UILabel</string>
+						<string key="itemUnit">UILabel</string>
+						<string key="mask">UIButton</string>
+						<string key="priceLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="buyButton">
+							<string key="name">buyButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="cancelButton">
+							<string key="name">cancelButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="coinCountLabel">
+							<string key="name">coinCountLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="coinLabel">
+							<string key="name">coinLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contentView">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itemCountLabel">
+							<string key="name">itemCountLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itemDescriptionLabel">
+							<string key="name">itemDescriptionLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itemImageView">
+							<string key="name">itemImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itemTitle">
+							<string key="name">itemTitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itemUnit">
+							<string key="name">itemUnit</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mask">
+							<string key="name">mask</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="priceLabel">
+							<string key="name">priceLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonItemInfoView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
